@@ -64,19 +64,17 @@ Ready.
 [ 27@0,	"tnonil",	"1"	]
 [ 28@0,	"tnil",	"0"	]
 [ 29@0,	"batInserted",	"0"	]
-[ 32@0,	"ttop",	"0"	]
-[ 33@0,	"batStamp",	"152"	]
-[ 34@0,	"lastUsed",	"1107"	]
-[ 35@0,	"curStamp",	"154"	]
-[ 36@0,	"batCopiedtodisk",	"0"	]
-[ 37@0,	"batDirtydesc",	"dirty"	]
-[ 38@0,	"T->heap.dirty",	"clean"	]
-[ 39@0,	"tail.free",	"0"	]
-[ 40@0,	"tail.size",	"1024"	]
-[ 41@0,	"tail.storage",	"malloced"	]
-[ 42@0,	"tail.newstorage",	"malloced"	]
-[ 43@0,	"tail.filename",	"22.tail"	]
-[ 44@0,	"T->vheap->dirty",	"clean"	]
+[ 30@0,	"ttop",	"0"	]
+[ 31@0,	"lastUsed",	"1107"	]
+[ 32@0,	"batCopiedtodisk",	"0"	]
+[ 33@0,	"batDirtydesc",	"dirty"	]
+[ 34@0,	"T->heap.dirty",	"clean"	]
+[ 35@0,	"tail.free",	"0"	]
+[ 36@0,	"tail.size",	"1024"	]
+[ 37@0,	"tail.storage",	"malloced"	]
+[ 38@0,	"tail.newstorage",	"malloced"	]
+[ 39@0,	"tail.filename",	"22.tail"	]
+[ 40@0,	"T->vheap->dirty",	"clean"	]
 #~EndVariableOutput~#
 #--------------------------#
 # h	t  # name
